--- a/edit_product.html
+++ b/edit_product.html
@@ -17,9 +17,11 @@
     <div id="editpage">
 
 
+
 <!--    HEADER  -->
       <header class="adminEditPage"><!--- Nav Bar -->
       <a href="#/mainpage" id="back-button"><i class="fa fa-angle-left" aria-hidden="true"></i></a><!-- BACK ARROW -->
+      <h1>Less Is More</h1>
         <ul>
           <a href="#/">
           <img src="#" id="logo">Logo</a>
@@ -39,26 +41,29 @@
     <div class="section group">
       <div class="col span_1_of_2">
       <form class="new-list-form" action="index.html" method="post">
-        <a href="#">
-        <img src="{{img}}" id="input-image" ng-show="editing" type="image" ng-model="image"/>Photo</a><!-- image -->
+        <a href='#/'>
+        <img src="{{img}" id="input-image" type="image" ng-model="image"/></a>
       </form>
      </div>
 
 
 <!--  PRICE AND DESCRIPTION -->
-    <div class="col span_1_of_2">
-      <ul id="admin-edit">
-          <li class="admin-edit-li">
-            <!-- <a href="#/"> -->
-            <input id="input-price" ng-show="editing" type="price" placeholder"{{price}}" ng-model="price"/>
-            <input id="input-description" ng-show="editing" type="text"  placeholder="{{description}}" ng-model="description"/>
-          </div>
-          </a>
-        </li>
+<div class="col span_1_of_2">
+  <ul id="admin-new">
+      <li class="admin-new-li">
+        <!-- <a href="#/"> -->
+        <input type="price"  id="input-price" placeholder"{{price}}" ng-model="price"/>
+        <h3>Price</h3>
+        <input type="text" id="input-description" placeholder="{{description}}" ng-model="description"/>
+        <h3>Description</h3>
+      </div>
+      <!-- </a> -->
+    </li>
+
 
         <!-- <li class='edit-btn'> -->
           <a href="#/mainpage">
-          <button class="save-item">Save</button>
+          <button class="save-item-btn">Save</button>
         </a>
       <!-- </li> -->
     </ul>
