--- a/main_admin.html
+++ b/main_admin.html
@@ -16,11 +16,14 @@
 
       <div id="mainpage">
 
+
+
       <header class="mainAdmPage"><!-- Nav Bar -->
+        <h1>Less IS More</h1>
 
       <ul>
       <a href="#/">
-      <img src="#" id="logo">Logo</a>
+      <img src="#" id="logo"></a>
       <li class="link"><a href="#"></a>
       <button>Cart</button></li>
       <li class="link"><a href="#"></a>
