--- a/admin_index.html
+++ b/admin_index.html
@@ -15,7 +15,7 @@
   <body>
 
 
-    <div ng-app="admin" ng-controller="mainController">
+    <div ng-app="admin">
       <div id="admin">
 
 
@@ -36,7 +36,7 @@
 
   <script src="assets/js/app.js"></script>
   <script src="assets/js/controller.js"></script>
-  <script src="assets/js/local.js"></script>
+  <!-- <script src="assets/js/local.js"></script> -->
 
 
 
