--- a/edit_product.html
+++ b/edit_product.html
@@ -24,13 +24,16 @@
       <h1>Less Is More</h1>
         <ul>
           <a href="#/">
-          <img src="#" id="logo">Logo</a>
-          <li class="link"><a href="#"></a>
-            <button>Cart</button></li>
-          <li class="link"><a href="#"></a>
-            <button>Home</button></li>
-          <li class="link"><a href="#"></a>
-            <button>Buyer</button></li>
+          <img src="#" id="logo"></a>
+          <a href="#">
+          <li class="link">Cart</a></li>
+          <!-- <button>Cart</button></li> -->
+          <a href="#">
+          <li class="link">Person</a></li>
+          <!-- <button>Person</button></li> -->
+          <a href="#">
+          <li class="link">Home</a></li>
+          <!-- <button>Home</button></li> -->
         <ul>
     </header>
 
@@ -42,7 +45,10 @@
       <div class="col span_1_of_2">
       <form class="new-list-form" action="index.html" method="post">
         <a href='#/'>
-        <img src="{{img}" id="input-image" type="image" ng-model="image"/></a>
+        <img src="{{item.img}" id="input-image" type="image" ng-model="image"/></a>
+        <!-- <a href="#/"> -->
+        <h4>Name</h4>
+        <div class="name" placeholder"{{item.name}}" ng-model="name"></div>
       </form>
      </div>
 
@@ -52,10 +58,10 @@
   <ul id="admin-new">
       <li class="admin-new-li">
         <!-- <a href="#/"> -->
-        <input type="price"  id="input-price" placeholder"{{price}}" ng-model="price"/>
-        <h3>Price</h3>
-        <input type="text" id="input-description" placeholder="{{description}}" ng-model="description"/>
-        <h3>Description</h3>
+        <h3>Price:</h3><input type="price"  id="input-price" placeholder"{{item.price}}" ng-model="price"/>
+        <!-- <a href="#/"> -->
+        <h3>Description:</h3><input type="text" id="input-description" placeholder="{{item.description}}" ng-model="description"/>
+
       </div>
       <!-- </a> -->
     </li>
