--- a/main_admin.html
+++ b/main_admin.html
@@ -19,19 +19,19 @@
 
 
       <header class="mainAdmPage"><!-- Nav Bar -->
-        <h1>Less IS More</h1>
+        <h1>BFF</h1>
 
-      <ul>
+      <ul class="header"><!-- control color-->
       <a href="#/">
       <img src="#"></a>
 
-      <a href="#">
-      <li class="link">Cart</li></a>
+
+      <li class="link"> <a href="#">Cart</li></a>
       <!-- <button>Cart</button></li> -->
-      <a href="#">
+
       <li class="link"><a href="#">Buyer</li></a>
       <!-- <button>Buyer</button></li> -->
-      <a href="#">
+
       <li class="link"><a href="#">Home</li></a>
       <!-- <button>Homer</button></li> -->
       <ul>
