Add main-page styling and fonts

--- a/admin_index.html
+++ b/admin_index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-
-
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
   <title>Admin View</title>
   <link rel="stylesheet" href="assets/styles/styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
@@ -15,7 +15,7 @@
   <body>
 
 
-    <div ng-app="admin">
+    <div ng-app="admin" ng-controller="mainController">
       <div id="admin">
 
 
