--- a/main_admin.html
+++ b/main_admin.html
@@ -19,7 +19,7 @@
 
 
       <header class="mainAdmPage"><!-- Nav Bar -->
-        <h1>BFF</h1>
+        <h1>beeFF's</h1>
 
       <ul class="header"><!-- control color-->
       <a href="#/">
