Add some weekend changes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular-resource.min.js"></script> -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.js"></script>
     <script type="text/javascript" src="assets/js/app.js"></script>
+    <script type = "text/javascript" src="assets/js/consumer_controller.js"></script>
 </body>
 
 </html>
