--- a/product_detail.html
+++ b/product_detail.html
@@ -38,8 +38,7 @@
             <div class="detailDesc">Lorem ipsum dolor sit amet, lacus nulla est integer. Feugiat nisl tortor ac lacus, dolor tincidunt pretium lorem, donec posuere at aenean at pellentesque. Dis malesuada diam tortor non ullamcorper, sed vehicula sit adipisicing, varius lacinia
                 condimentum ut duis nisl diam, fusce massa mauris fames elit vitae vitae, tincidunt mattis mauris tempor.
                 <br>
-                <div class="addBtn">Add to Cart
-              </div>
+                  <button class ="addCart"> Add to Cart </button>
           </div>
           <div class = "detailPrice">$15
           </div>
